# docs-ipaymu-api-v2

./: .gitignore  INTEGRATION-close-api.md  README.md  agent.md  area-api-docs.md  callbk.md  iPaymu Public API v2.postman_collection.json  next.config.mjs  package.json  source.config.ts
.github/workflows/: pages.yml
.tw-patch/: tw-class-list.json
content/close-api/: bank-list.en.mdx  bank-list.mdx  business-category.en.mdx  business-category.mdx  index.en.mdx  index.mdx  member-verification.en.mdx  member-verification.mdx  merchant-verification.en.mdx  merchant-verification.mdx  meta.json  profile.en.mdx  profile.mdx  register.en.mdx  register.mdx  transfer-va.en.mdx  transfer-va.mdx
content/docs/: area-api.en.mdx  area-api.mdx  callback.en.mdx  callback.mdx  cod.en.mdx  cod.mdx  getting-started.en.mdx  getting-started.mdx  index.en.mdx  index.mdx  ip-domain-validation.en.mdx  ip-domain-validation.mdx  meta.json  signature.en.mdx  signature.mdx
content/docs-plugins/: index.en.mdx  index.mdx  meta.json  moodle.en.mdx  moodle.mdx  whmcs.en.mdx  whmcs.mdx  woocommerce.en.mdx  woocommerce.mdx
content/verification/: faq.en.mdx  faq.mdx  index.en.mdx  index.mdx  meta.json  refund-policy.en.mdx  refund-policy.mdx  terms-and-conditions.en.mdx  terms-and-conditions.mdx
examples/: .gitignore  README.md
examples/go/: README.md  go.mod  main-json.go  (+1 more)
examples/rust/: Cargo.toml  README.md  test_hash.js
examples/rust/src/: main-json.rs  main-urlencoded.rs
scripts/: build-pages.mjs  clean-staged.mjs  preview-pages.mjs  with-close-api.mjs
src/: mdx-components.tsx
(+69 files in other folders)
