[package]
name = "ipaymu-callback-rust"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "callback-urlencoded"
path = "src/main-urlencoded.rs"

[[bin]]
name = "callback-json"
path = "src/main-json.rs"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde_urlencoded = "0.7.1"
